-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.10.0, Lustre 2.11.0, Lustre 2.12.0
-
None
-
3
-
9223372036854775807
mdt.mdt_mds_mds_conns is inter-MDT connection counter, and it's used by DNE Commit-on-Sharing and directory auto-split, but it's only counted in mdt_obd_connect(), however upon MDT stop and start, the connection is handled in mdt_obd_reconnect(), as a result, this counter is not accurate, and cause Commit-on-Sharing and directory auto-split fail to work.
- is related to
-
LU-11025 DNE3: directory restripe
-
- Resolved
-